# portfolio-cli

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: check-and-lint.yml  clippy.yml  main.yml  release-packaging.yml  rust.yml  test.yml  upload-test-results.yml
src/: erc20.rs  main.rs
src/lib/: coingecko.rs  erc20.rs  mod.rs  paraswap.rs  price_provider.rs  random.rs
