[package]
name = "portfolio-cli"
version = "1.0.0"
authors = ["Jonathan <JonaC22@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
tokio = { version = "1.19.2", features = ["full"] }
config = "0.13.1"
reqwest = "0.11.11"
jql = "4.0.6"
serde_json = "1.0.82"
governor = "0.4.2"
nonzero_ext = "0.3.0"
indicatif = "0.16.1"
piechart = "1.0.0"
rand = "0.8.0"
clap = "3.2.8"
prettytable-rs = "0.8"
