[package]
name = "portfolio-cli"
version = "1.0.0"
authors = ["Jonathan <JonaC22@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
tokio = { version = "1.19.2", features = ["full"] }
config = "0.13.1"
reqwest = "0.11.11"
jql = "6.0.5"
serde_json = "1.0.82"
governor = "0.5.0"
nonzero_ext = "0.3.0"
indicatif = "0.17.0"
piechart = "1.0.0"
rand = "0.8.0"
clap = { version = "4.0.11", features = ["derive"] }
prettytable-rs = "0.10"
openssl = { version = "0.10.40", features = ["vendored"] }
async-trait = "0.1.57"
proc-macro2 = "1.0.46"
